stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_validate__validate_help.snap
---
source: crates/stepflow-main/tests/commands/test_validate.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - validate
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Validate workflow files and configuration.

Validate workflow files and configuration without executing them. This performs workflow validation (structure, step dependencies, value references), configuration validation (plugin definitions, routing rules), component routing validation, and schema validation. Returns 0 for success, 1+ for validation failures (suitable for CI/CD pipelines).

# Examples

```bash

# Validate workflow with auto-detected config stepflow validate --flow=examples/basic/workflow.yaml

# Validate with specific config stepflow validate --flow=workflow.yaml --config=my-config.yml

```

Usage: stepflow validate [OPTIONS] --flow <FILE>

Options:
      --flow <FILE>
          Path to the workflow file to validate

      --log-level <LEVEL>
          Set the log level for Stepflow
          
          [default: info]
          [possible values: trace, debug, info, warn, error]

      --config <FILE>
          The path to the stepflow config file.
          
          If not specified, will look for `stepflow-config.yml` in the directory containing the workflow file. If that isn't found, will also look in the current directory.

      --other-log-level <LEVEL>
          Set the log level for other parts of Stepflow
          
          [default: warn]
          [possible values: trace, debug, info, warn, error]

      --log-file <FILE>
          Write logs to a file instead of stderr

      --omit-stack-trace
          Omit stack traces (line numbers of errors)

  -h, --help
          Print help (see a summary with '-h')

----- stderr -----
