stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_validate__validate_nonexistent_workflow.snap
---
source: crates/stepflow-main/tests/commands/test_validate.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - validate
    - "--flow=nonexistent.yaml"
---
success: false
exit_code: 1
----- stdout -----
🔧 Validating configuration...
✅ Found 1 plugin(s) configured
❌ No routing rules configured in stepflow-config.yml
⚠️  Plugin 'builtin' is not referenced by any routing rule
❌ Configuration has 1 issue(s)
📋 Validating workflow: nonexistent.yaml
❌ Workflow validation failed for nonexistent.yaml: Missing file: nonexistent.yaml
❌ Validation completed with 2 failure(s)

----- stderr -----
